optimized: menu_actions & assets & partials locations & footer implemented

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,8 +12,10 @@
  *
  *= require font-awesome
  *= require bootstrap-social
- *= require_tree .
- *= require_self
+ *
+ * My CSS
+ *= require fast_fix
+ *= require home
  */
 
 @import "materialize";
