--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,7 +1,7 @@
-=render 'home/nav'
+=render 'home/partials/nav'
 
 /! TODO how to create the functionality listing
 
-=render 'home/costumers_feedback'
-=render 'home/prices'
-=render 'home/footer'
+=render 'home/partials/costumers_feedback'
+=render 'home/partials/prices'
+=render 'home/partials/footer'
