- fast_fix.scss: footer & footer-copyright styled - omniauth callbacks controller added - social_login to create the social LogIn buttons added as helper - user.rb linked to ominiauth - float_button: using the ENUM social networks to generate the LogIn buttons - footer: copyright added & social plugin buttons - home/index: float_button partial added - social_networks: YML enum added - devise init added - load_enums init added - shareable init added - devise EN locale added - routes devise route with ominiauth added - user migrate added - shareable GEM added

--- a/app/assets/stylesheets/fast_fix.scss
+++ b/app/assets/stylesheets/fast_fix.scss
@@ -6,8 +6,40 @@ nav ul#mobile-demo.customized li:hover, nav ul li.active {
   padding-left: 10px;
 }
 
-footer {
+footer.page-footer {
   bottom: 0;
   width: 100%;
   position: fixed;
+
+  .footer-copyright {
+    #copyright {
+      text-align: center;
+    }
+
+    div.fb-like.fb_iframe_widget {
+      bottom: 21px;
+    }
+  }
+
+  .card a {
+    color: #BBB;
+    text-transform: none;
+  }
+
+  .card a:hover {
+    color: #9F9F9F;
+  }
+
+  i.fa {
+    font-size: 1.5em;
+    margin-right: 5px;
+  }
+
+  ul li {
+    margin-bottom: 15px;
+  }
+
+  ul li:last-child {
+    margin-bottom: 0;
+  }
 }
