- sample_profile image added - application.js = slider events added - application sass = importing the MediaQueries - media queries added (smartphone, tablet & small_resolution) - home sass = #costumers_feedback styles added - fast_fix sass = footer.page-footer fixed - partials/costumer feedback card = costumer feedback card created - costumers_feedback = calling the costumer feedback card - footer = windows logo color updated - visual identity moved from the nav to de index - shareable init added

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,13 @@
  * My CSS
  *= require fast_fix
  *= require home
+ *
+ *  Media Queries
+ *= require small_resolutions
+ *= require smartphone_landscape
+ *= require smartphone_portrait
+ *= require tablet_landscape
+ *= require tablet_portrait
  */
 
 @import "materialize";
