--- a/app/views/home/partials/_footer.html.slim
+++ b/app/views/home/partials/_footer.html.slim
@@ -29,7 +29,7 @@ footer class="page-footer #{@visual_identity}"
                 =" Baixe no Google Play"
             li
               a href="#"
-                i.fa.fa-windows style="color:#369;"
+                i.fa.fa-windows style="color:#2672ec;"
                 =" Baixe na Windows Phone Store"
 
   .footer-copyright style="height: auto;"
