--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,8 +1,16 @@
+/! TODO, edit it visual_identity to your colors, like teal lighten
+-@visual_identity = "teal darken-1"
+-@text_visual_identity = "amber-text text-lighten-3"
+-@mobile_text_visual_identity = @text_visual_identity #"teal-text text-darken-1"
+
 =render 'home/partials/nav'
 =render 'home/partials/float_button'
 
 /! TODO how to create the functionality listing
 
-=render 'home/partials/costumers_feedback'
+#costumers_feedback
+  .row
+    .container
+      =render 'home/partials/costumers_feedback'
 =render 'home/partials/prices'
 =render 'home/partials/footer'
