vars moved to a partial & scrollTo GEM added & action scrollTo added

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -2,6 +2,12 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+#homepage {
+  .divider {
+    margin: 0 0 25px;
+  }
+}
+
 .weak {
   font-weight: 100;
 }
