--- a/app/views/home/partials/_menu_actions.html.slim
+++ b/app/views/home/partials/_menu_actions.html.slim
@@ -1,16 +1,16 @@
 li
+  a href="#features" class="#{@text_visual_identity}"
+    i.mdi-action-dashboard.left
+    | features
+li
+  a href="#people_saying" class="#{@text_visual_identity}"
+    i.mdi-action-question-answer.left
+    | feedback
+li
+  a href="#prices" class="#{@text_visual_identity}"
+    i.mdi-maps-local-atm.left
+    | prices
+li
   a href="#" class="#{@text_visual_identity}"
-    i.mdi-action-search.left
-    | Action1
-  li
-    a href="#" class="#{@text_visual_identity}"
-      i.mdi-action-view-module.left
-      | Action2
-  li
-    a href="#" class="#{@text_visual_identity}"
-      i.mdi-navigation-refresh.left
-      | Action2
-  li
-    a href="#" class="#{@text_visual_identity}"
-      i.mdi-navigation-more-vert.left
-      | Action2
+    i.mdi-communication-email.left
+    | contact us
