--- a/app/views/home/partials/_nav.html.slim
+++ b/app/views/home/partials/_nav.html.slim
@@ -1,10 +1,11 @@
-nav.navbar-fixed
-  div class="nav-wrapper #{@visual_identity}"
-    a.brand-logo href="#" Logo
+.navbar-fixed
+  nav
+    div class="nav-wrapper #{@visual_identity}"
+      a.brand-logo href="#" Logo
 
-    a.button-collapse href="#" data-activates="mobile-demo"
-      i.mdi-navigation-menu
-    ul.right.hide-on-med-and-down
-      =render 'home/partials/menu_actions'
-    ul#mobile-demo class="side-nav customized #{@visual_identity}"
-      =render 'home/partials/mobile_menu_actions'
+      a.button-collapse href="#" data-activates="mobile-demo"
+        i.mdi-navigation-menu
+      ul.nav_actions.right.hide-on-med-and-down
+        =render 'home/partials/menu_actions'
+      ul#mobile-demo class="side-nav nav_actions customized #{@visual_identity}"
+        =render 'home/partials/mobile_menu_actions'
