- home coffee changed to just js - home sass: contact_us submit button & fixed action btn style refactored - smartphone fixed action style refactored - menu_actions & mobile_menu_actions moved from partials to components - contact_us form created - float_button refactored: style attr removed (Now it is on the CSS) - nav calling from components not from partials - socials commented to prevent bug while clicking on the menu card action (LinkedIn & Instagram)

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -6,6 +6,10 @@
   .divider {
     margin: 0 0 25px;
   }
+
+  .fixed-action-btn {
+      bottom: 5%;
+  }
 }
 
 .weak {
@@ -109,5 +113,11 @@ div[id*=feedback] {
     .price_value {
       font-size: 2em;
     }
+  }
+}
+
+#contact_us {
+  #submit-btn {
+    margin: 10px 0;
   }
 }
