--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -23,4 +23,11 @@
     .container
       .row
         =render 'home/partials/prices'
+
+    #contact.container
+      .divider
+    .section
+      .container
+        .row
+          =render 'home/partials/contact_us'
   =render 'home/partials/footer'
