--- a/app/views/home/partials/_float_button.html.slim
+++ b/app/views/home/partials/_float_button.html.slim
@@ -1,4 +1,4 @@
-.fixed-action-btn style="bottom: 12%; right: 24px;"
+.fixed-action-btn
   .btn-floating.btn-large.red
     i.large.mdi-social-person-add
   ul
