--- a/app/views/home/partials/components/_menu_actions.html.slim
+++ b/app/views/home/partials/components/_menu_actions.html.slim
@@ -11,6 +11,6 @@ li
     i.mdi-maps-local-atm.left
     | prices
 li
-  a href="#" class="#{@text_visual_identity}"
+  a href="#contact" class="#{@text_visual_identity}"
     i.mdi-communication-email.left
     | contact us
