--- a/app/views/home/partials/_float_button.html.slim
+++ b/app/views/home/partials/_float_button.html.slim
@@ -2,6 +2,10 @@
   .btn-floating.btn-large.red
     i.large.mdi-social-person-add
   ul
+    li
+      a href="#" class="btn-floating btn-small waves-effect waves-light teal lighten-3 tooltipped" data-position="left" data-tooltip="FormLogIn"
+        i.mdi-action-assignment
+
     -ENUM[:social_networks].reverse.each do |social_network|
       li
         a href="#{social_login social_network[:auth_gem]}" class="btn-floating btn-small waves-effect waves-light #{social_network[:style]} tooltipped" data-position="left" data-tooltip="#{social_network[:name]}"
