simple updated from the RentS Home

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -5,7 +5,7 @@
 
   #features.container
     .divider
-  .section
+  .section.features
     .container
       .row
         =render 'home/partials/features'
@@ -19,14 +19,14 @@
 
   #prices.container
     .divider
-  .section
+  .section.prices
     .container
       .row
         =render 'home/partials/prices'
 
     #contact.container
       .divider
-    .section
+    .section.contact
       .container
         .row
           =render 'home/partials/contact_us'
