--- a/app/views/home/partials/_float_button.html.slim
+++ b/app/views/home/partials/_float_button.html.slim
@@ -3,7 +3,7 @@
     i.large.mdi-social-person-add
   ul
     li
-      a href="#" class="btn-floating btn-small waves-effect waves-light teal lighten-3 tooltipped" data-position="left" data-tooltip="FormLogIn"
+      a href="#" class="btn-floating btn-small waves-effect waves-light teal lighten-3 tooltipped" data-position="left" data-tooltip="Formulário"
         i.mdi-action-assignment
 
     -ENUM[:social_networks].reverse.each do |social_network|
