--- a/app/views/home/partials/_nav.html.slim
+++ b/app/views/home/partials/_nav.html.slim
@@ -1,7 +1,7 @@
 .navbar-fixed
   nav
     div class="nav-wrapper #{@visual_identity}"
-      a.brand-logo href="#" Logo
+      a.brand-logo href="#" =render 'layouts/partials/brand'
 
       a.button-collapse href="#" data-activates="mobile-demo"
         i.mdi-navigation-menu
