--- a/app/views/home/partials/components/_feature.html.slim
+++ b/app/views/home/partials/components/_feature.html.slim
@@ -1,13 +1,17 @@
-.row
-  .col.l4
-    -@desc_icon = 'mdi-social-group'
-    -@desc_icon_color = @text_visual_identity
+.col.s12.l4
+  .center.feature
+    -if !@desc_icon.index('logo').nil?
+      =link_to @partner_url, target: '_blank' do
+        =image_tag @desc_icon, class: 'fa feature_partner_logo'
+    -else
+      i class="#{@desc_icon} #{@desc_icon_color}"
+
+    -if !@partner_url.nil?
+      =link_to @partner_url, target: '_blank' do
+        p.promo-caption =@caption
+    -else
+      p.promo-caption =@caption
     =render 'home/partials/components/feature_description'
-  .col.l4
-    -@desc_icon = 'mdi-action-payment'
-    -@desc_icon_color = @text_visual_identity2
-    =render 'home/partials/components/feature_description'
-  .col.l4
-    -@desc_icon = 'mdi-action-store'
-    -@desc_icon_color = @text_visual_identity3
-    =render 'home/partials/components/feature_description'
+
+-#reset the partner
+-@partner_url = nil
