--- a/app/views/home/partials/components/_menu_actions.html.slim
+++ b/app/views/home/partials/components/_menu_actions.html.slim
@@ -1,7 +1,7 @@
 li
   a href="#features" class="#{@text_visual_identity}"
     i.mdi-action-dashboard.left
-    | features
+    | funcionalidades
 li
   a href="#people_saying" class="#{@text_visual_identity}"
     i.mdi-action-question-answer.left
@@ -9,8 +9,8 @@ li
 li
   a href="#prices" class="#{@text_visual_identity}"
     i.mdi-maps-local-atm.left
-    | prices
+    | preços
 li
   a href="#contact" class="#{@text_visual_identity}"
     i.mdi-communication-email.left
-    | contact us
+    | contate-nos
